tests/compiler/diagnostics-engine/tests/no-class/expected.txt
error: Expected 'class', got 'function'
 --> source.jack:1:1
  |
1 | function void multiply(int x, int y) {
  | ^~~~~~~~
